[package]
name = "esp32c3_no_std_async_mqtt_demo"
version = "0.1.0"
authors = ["Juraj Sadel <juraj.sadel@espressif.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "1.0.0-beta.0", features = ["esp32c3", "unstable"] }
esp-wifi = { version = "0.13.0", features = [
    "esp32c3",
    "wifi",
    "esp-alloc",
    "log",
] }
esp-alloc = { version = "0.7.0" }
log = "0.4.22"
heapless = "0.8.0"
esp-backtrace = { version = "0.15.1", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32c3"] }
esp-println = { version = "0.13.1", features = ["esp32c3", "log"] }
embassy-net = { version = "0.6.0", features = [
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
    "proto-ipv6",
    "log",
    "dns",
] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = "0.4.0"
embedded-hal-async = { version = "1.0.0" }
static_cell = { version = "2.0", features = ["nightly"] }
rust-mqtt = { version = "0.3.0", default-features = false }
